--- a/Semana 2/4 - nav + table/nav/index.html
+++ b/Semana 2/4 - nav + table/nav/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
-    <title>Ex4 - HTML Semântico</title>
+    <title>Ex - nav</title>
 </head>
 
 <body>
